argocd/prod/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.naturalselectionlabs.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`argocd.naturalselectionlabs.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
